--- a/huawei-rtc-electron/package.json
+++ b/huawei-rtc-electron/package.json
@@ -47,6 +47,7 @@
       "assets",
       "preload.js"
     ],
+    "afterPack": "./script/AfterPackHook.js",
     "afterSign": ".erb/scripts/Notarize.js",
     "mac": {
       "target": [
@@ -261,6 +262,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "fs-extra": "^10.0.0",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
