--- a/huawei-rtc-electron/package.json
+++ b/huawei-rtc-electron/package.json
@@ -15,7 +15,8 @@
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.babel.js",
-    "test": "jest"
+    "test": "jest",
+    "preinstall": "node .//script//Preinstall.js"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
