fix # 优化安装、build后文件问题

--- a/huawei-rtc-electron/package.json
+++ b/huawei-rtc-electron/package.json
@@ -73,7 +73,16 @@
         }
       ]
     },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": false
+    },
     "win": {
+      "requestedExecutionLevel": "highestAvailable",
       "target": [
         "nsis"
       ]
