--- a/huawei-rtc-classroom/package.json
+++ b/huawei-rtc-classroom/package.json
@@ -31,7 +31,7 @@
     "ts-md5": "^1.2.9",
     "vue": "^3.1.5",
     "vue-class-component": "^8.0.0-rc.1",
-    "vue-router": "^4.0.10",
+    "vue-router": "4.0.11",
     "vuex": "^4.0.2",
     "vuse-rx": "^0.13.1"
   },
@@ -40,6 +40,7 @@
     "@babel/register": "^7.14.5",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.10",
+    "@vitejs/plugin-legacy": "^1.5.3",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/compiler-sfc": "^3.0.5",
