--- a/huawei-rtc-classroom/vue/package.json
+++ b/huawei-rtc-classroom/vue/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "element-plus": "^1.0.2-beta.70",
     "events": "^3.3.0",
+    "hrtc-sdk-services": "^0.0.1",
     "js-cookie": "^3.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
