--- a/huawei-rtc-classroom/angular/angular.json
+++ b/huawei-rtc-classroom/angular/angular.json
@@ -71,7 +71,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "port": 8088
+            "port": 8088,
+            "open": true,
+            "liveReload": true
           },
           "configurations": {
             "production": {
