--- a/huawei-rtc-classroom/vue/.env.production
+++ b/huawei-rtc-classroom/vue/.env.production
@@ -1,10 +1,10 @@
 # 华为rtc
-VITE_HUAWEI_RTC_APPID = 5fd093b419d2a9b6f835db46
-VITE_HUAWEI_DOMAIN = 5fd093b419d2a9b6f835db46.cloudrtc.myhuaweicloud.com
+VITE_HUAWEI_RTC_APPID =
+VITE_HUAWEI_DOMAIN =
 # 声网rtm AppID
-VITE_AGORA_RTC_APPID = 012c90cfc12a4384a21eeaf0580b0ec3
+VITE_AGORA_RTC_APPID =
 # 百家云 远程控制sdk
-VITE_CONTROL_ACCOUNT = 463042379197
-VITE_CONTROL_PASS = 3f9c2866b8888d6df82b1e6640055918
-VITE_SERVER = PHSRC://122.9.41.33:4118;PHSRC_HTTPS://122.9.41.33:3443;
-VITE_SERVER_KEY = SHA1:rbogvwrb;/FT0v9uYHbATvt/FRd415gLBNXA=
+VITE_CONTROL_ACCOUNT =
+VITE_CONTROL_PASS =
+VITE_SERVER =
+VITE_SERVER_KEY =
