fix # vue bug. add setting btn

--- a/huawei-rtc-classroom/vue/package.json
+++ b/huawei-rtc-classroom/vue/package.json
@@ -13,14 +13,14 @@
     "dev-agora-web": "cross-env company=agora sdk_platform=web node -r @babel/register ./script/SetBuildEnvInject.js && npm run dev"
   },
   "dependencies": {
-    "@huyandong/netease-nim-web-sdk": "^8.7.2",
+    "@huyandong/netease-nim-web-sdk": "^8.7.3",
     "@types/js-cookie": "^2.2.7",
     "agora-rtc-sdk-ng": "^4.6.2",
     "agora-rtm-sdk": "^1.4.3",
     "ant-design-vue": "^2.2.6",
     "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
-    "element-plus": "^1.0.2-beta.70",
+    "element-plus": "^1.1.0-beta.20",
     "events": "^3.3.0",
     "hrtc-sdk-services": "^0.0.1",
     "js-cookie": "^3.0.0",
@@ -31,7 +31,7 @@
     "rxjs": "^7.3.0",
     "semver-diff": "^4.0.0",
     "ts-md5": "^1.2.9",
-    "vue": "^3.1.5",
+    "vue": "3.2.19",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "4.0.11",
     "vuex": "^4.0.2",
@@ -51,7 +51,8 @@
     "electron": "^5.0.13",
     "less": "^4.1.1",
     "sass": "^1.37.5",
-    "vite": "^2.4.4",
+    "unplugin-vue-components": "^0.15.6",
+    "vite": "^2.6.7",
     "vite-plugin-components": "^0.13.2",
     "vite-plugin-style-import": "^1.1.1",
     "vue-property-decorator": "^10.0.0-rc.3"
