fix # update hrtc sdk 2.0.0

--- a/huawei-rtc-electron/src/package.json
+++ b/huawei-rtc-electron/src/package.json
@@ -12,6 +12,6 @@
   "license": "MIT",
   "dependencies": {
     "bjysdk": "../sdk/bjysdk.tar.gz",
-    "huawei-electron-sdk": "../sdk/hrtc-electron-sdk.tar.gz"
+    "hrtc-electron-sdk": "../sdk/hrtc-electron-sdk.tar.gz"
   }
 }
