--- a/huawei-rtc-classroom/vue/package.json
+++ b/huawei-rtc-classroom/vue/package.json
@@ -30,6 +30,7 @@
     "qs": "^6.10.1",
     "rxjs": "^7.3.0",
     "semver-diff": "^4.0.0",
+    "store": "^2.0.12",
     "ts-md5": "^1.2.9",
     "vue": "3.2.19",
     "vue-class-component": "^8.0.0-rc.1",
@@ -42,6 +43,7 @@
     "@babel/register": "^7.14.5",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.10",
+    "@types/store": "^2.0.2",
     "@vitejs/plugin-legacy": "^1.5.3",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vitejs/plugin-vue-jsx": "^1.1.7",
