update: react project finish

--- a/huawei-rtc-classroom/react/package.json
+++ b/huawei-rtc-classroom/react/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/store": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "agora-rtm-sdk": "^1.4.3",
@@ -32,6 +33,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
@@ -85,6 +87,7 @@
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "semver-diff": "^4.0.0",
+    "store": "^2.0.12",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
