--- a/huawei-rtc-classroom/angular/package.json
+++ b/huawei-rtc-classroom/angular/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/store": "^2.0.2",
     "hrtc-sdk-services": "0.0.1",
+    "lodash": "^4.17.21",
+    "ng-zorro-antd": "^12.0.1",
     "rxjs": "~6.6.0",
+    "store": "^2.0.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
