fix # 更新Electron rtc sdk 部分使用场景优化

--- a/huawei-rtc-electron/package.json
+++ b/huawei-rtc-electron/package.json
@@ -266,6 +266,7 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.177",
     "antd": "^4.16.7",
     "classnames": "^2.3.1",
     "electron-debug": "^3.1.0",
@@ -273,6 +274,7 @@
     "electron-updater": "^4.3.4",
     "fs-extra": "^10.0.0",
     "history": "^5.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
