--- a/huawei-rtc-electron/package.json
+++ b/huawei-rtc-electron/package.json
@@ -166,6 +166,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.19",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.1",
@@ -266,10 +267,10 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.177",
     "antd": "^4.16.7",
     "classnames": "^2.3.1",
     "electron-debug": "^3.1.0",
+    "electron-json-storage": "^4.5.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "fs-extra": "^10.0.0",
