fix: 更新sdk，更新preload

--- a/huawei-rtc-electron/package.json
+++ b/huawei-rtc-electron/package.json
@@ -32,8 +32,8 @@
     ]
   },
   "build": {
-    "productName": "HuaweiRTCDemo",
-    "appId": "com.tedu.hrtc.remotecontrol",
+    "productName": "RTCDemo",
+    "appId": "com.tedu.rtc.demo",
     "nodeGypRebuild": false,
     "npmRebuild": false,
     "files": [
