--- a/huawei-rtc-electron/src/package.json
+++ b/huawei-rtc-electron/src/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.1",
   "description": "RemoteControlByElectron based on React, React Router, Webpack, React Hot Loader for rapid application development",
   "main": "./main.prod.js",
+  "author": {
+    "name": "HuaWeiRTCByElectron",
+    "email": "HuaWeiRTCByElectron@tedu.cn"
+  },
   "scripts": {
     "electron-rebuild": "node -r ../.erb/scripts/BabelRegister.js ../.erb/scripts/ElectronRebuild.js",
     "postinstall": "yarn electron-rebuild",
